
=over

=item *

Templates that are deployed from the "Find Templates" screen are
now checked-in if they were checked-out by the person doing the
deployings. This way deploy from "Find Templates" works the same as
deploy from "Edit Template" [Michael Peters]

=item *

Publisher now looks at all the categories for a story in the
C<_add_category_linked_stories()> method. [Brad Oaks]

=item *

Added Fedora 15 & 16 as build platforms. [Michael Peters]

=item *

L<Krang::HTMLPager> now adds double-backslash-escaping to C<&#39;> and C<&apos;>
entities in the C<command_column_extra_args> for dynamic columns. [Brad Oaks]

=back

=head2 3.17 - February, 06, 2012

=over

=item *

Fixed bug in which the krang_install script did not respect the DBSock
conf file option, preventing installation and upgrade when using a 
nonstandard mysql socket location
[Rudolf Lippan]

=item *

The Scheduler now makes sure jobs either die or call clean_entry
or delete.  If they don't do one of those three things before returning,
we log an error.  This makes sure next_run is always updated.
[Daniel S. Sterling]

=item *

Added a method to ElementClass which can be overridden to decide
during a publish if a L<Krang::ElementClass::CategoryLink> should
cause other stories to be published. [Brad Oaks]

=back

=head2 3.16 - January, 25 2012

=over

=item *

On startup the C<bin/krang_scheduled> daemon clears the claim for any
stuck Schedule entries where the claim contains the machine's hostname.
[Brad Oaks]

=item *

Updated C<Krang.Window.log_out()> so that it updates other logged in
windows or tabs to reflect that the user has logged out. [Brad Oaks]

=item *

Optimize C<Krang::Group->add_user_permissions()> so that it doesn't
perform so many database queries. The count can grow dramatically as
the number of users and categories increases. [Michael Peters]

=item *

Added C<--groups> option to F<bin/krang_floodfill>. [Michael Peters]

=item *
